# proctor-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  rustfmt.toml
.github/workflows/: general.yml
app_data_derive/: Cargo.toml
app_data_derive/src/: lib.rs
benches/: bench_main.rs  profiler.rs
benches/benchmarks/: merge.rs
configuration/: development.toml
examples/: async_stream.rs  config.rs  eth_scan.rs  sandbox.rs
examples/data/: eligibility.csv
proctor_derive/: Cargo.toml
proctor_derive/src/: lib.rs
src/: app_data.rs  data_set.rs  envelope.rs  error.rs  graph.rs  lib.rs  main.rs  metrics.rs  settings.rs  telemetry.rs  tracing.rs
src/elements/: collection.rs  decision_context.rs  from_telemetry.rs  metric.rs  metric_catalog.rs  mod.rs  performance_history.rs  policy_filter.rs  records_per_second.rs  signal.rs  telemetry.rs  timestamp.rs  timestamp_seconds.rs
src/elements/policy_filter/: outcome.rs  policy.rs  protocol.rs  result.rs  settings.rs  source.rs
src/elements/telemetry/: combine.rs  de.rs  from_telemetry.rs  ser.rs  to_telemetry.rs  value.rs  value_type.rs
src/error/: decision_errors.rs  eligibility_errors.rs  governance_errors.rs  graph_errors.rs  metrics_errors.rs  mod.rs  plan_errors.rs  policy_errors.rs  port_errors.rs  sense_errors.rs  sensor_errors.rs  stage_errors.rs  telemetry_errors.rs
src/flink/: README.md  eligibility.rs  metric_catalog.rs  mod.rs  perf.rs
src/flink/decision/: context.rs  mod.rs  policy.rs  result.rs
src/flink/eligibility/: context.rs  mod.rs  policy.rs
src/flink/governance/: context.rs  mod.rs  policy.rs  result.rs
src/flink/plan/: appraisal.rs  appraisal_repository.rs  benchmark.rs  forecast.rs  mod.rs  performance.rs  performance_history.rs  performance_repository.rs  performances_repository.rs  planning.rs
src/flink/plan/forecast/: calculator.rs  least_squares.rs  regression.rs  ridge_regression.rs  signal.rs
src/graph/: node.rs  node_ref.rs  port.rs  shape.rs  stage.rs
src/graph/stage/sink/: fold.rs  foreach.rs  logged.rs  mod.rs
src/graph/stage/source/: actor_source.rs  composite_source.rs  mod.rs  refreshable.rs  refreshable_stream.rs  sequence.rs  tick.rs  triggered_generator.rs
src/graph/stage/through/: and_then.rs  broadcast.rs  composite_through.rs  filter.rs  filter_map.rs  identity.rs  map.rs  merge.rs  merge_combine.rs  merge_n.rs  mod.rs  reduce_within.rs
src/phases/: data.rs  decision.rs  eligibility.rs  from_telemetry.rs  governance.rs  mod.rs  plan.rs  policy_filter.rs  policy_phase.rs
src/phases/collection/: builder.rs  clearinghouse.rs  mod.rs  settings.rs  source.rs  subscription_channel.rs  telemetry.rs
src/phases/collection/clearinghouse/: magnet.rs  protocol.rs  subscription.rs
src/phases/eligibility/: context.rs  gather.rs  mod.rs  policy.rs
src/phases/sense/: builder.rs  clearinghouse.rs  mod.rs  sensor.rs  settings.rs  subscription_channel.rs
src/phases/sense/clearinghouse/: agent.rs  cache.rs  magnet.rs  protocol.rs  subscription.rs  tests.rs
src/serde/: date.rs  date_serde.rs  mod.rs
src/settings/: model.rs
tests/: basic_3_fan_in_merge.rs  complex_fan_in.rs  test_basic_clearinghouse_subscription.rs  test_decision.rs  test_eligibility.rs  test_from_telemetry_stage.rs  test_make_telemetry_cvs_source.rs  test_make_telemetry_rest_api_source.rs  test_policy_filter.rs  test_policy_phase.rs
tests/data/: cats.csv  eligibility.csv
tests/elements/: main.rs  test_basic_clearinghouse_subscription.rs  test_from_telemetry_stage.rs  test_make_telemetry_cvs_source.rs  test_make_telemetry_rest_api_source.rs  test_policy_filter.rs
tests/fixtures/: mod.rs
tests/flink/: fixtures.rs  main.rs  test_decision.rs  test_flink_plan_calculator.rs  test_flink_planning_stage.rs  test_governance.rs
tests/graph/: basic_3_fan_in_merge.rs  complex_fan_in.rs  main.rs
tests/policies/: eligibility.polar
