[package]
name = "proctor"
version = "0.20.0"
authors = ["Damon Rolfs <drolfs@gmail.com>"]
edition = "2021"
repository = "https://github.com/dmrolfs/proctor-rs"
description = """\
Asynchronous Rust crate to support the continuous assessment and business rule based direction for \
capabilities. This reactive crate is built directly on Tokio asynhronous library. \
"""
license = "MIT"
keywords = ["decsion", "assessment", "policy"]
categories = ["Policy", "Development tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[example]]
name = "sandbox"
path = "examples/sandbox.rs"

[[example]]
name = "eth-scan"
path = "examples/eth_scan.rs"

[[example]]
name = "async-stream"
path = "examples/async_stream.rs"

[dependencies]
anyhow = "1"
approx = "0"
async-stream = "0"
async-trait = "0"
strum = "0.24.1"
strum_macros = "0.24.3"
cast_trait_object = "0"
chrono = "0"
clap = "4"
config = "0"
#config = { git = "https://github.com/dmrolfs/config-rs" }
csv = "1"
dashmap = "5"
either = { version = "1", features = ["serde"] }
enum-display-derive = "0"
flexbuffers = "2"
frunk = "0"
futures = "0"
futures-util = "0"
handlebars = "4"
itertools = "0"
maplit = "1"
num_cpus = "1"
num-traits = "0"
once_cell = "1"
oso = "0"
path-absolutize = "3"
polar-core = "0"
pretty-snowflake = { git = "https://github.com/dmrolfs/pretty-snowflake-rs" }
proctor_derive = { path = "proctor_derive" }
prometheus = { version = "0", features = ["process"] }
prometheus-static-metric = "0"
regex = "1"
reqwest = { version = "0", features = ["blocking", "json"] }
reqwest-middleware = "0"
reqwest-retry = "0"
ron = "0.8"
serde = "1"
serde_json = "1"
serde_yaml = "0"
statrs = "0"
stretto = { version = "0", features = ["async"] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0"
tracing-bunyan-formatter = "0"
tracing-flame = "0"
tracing-futures = "0"
tracing-log = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "json"] }
trim-margin = "0"
url = "2"
validator = { version = "0", features = ["derive"] }


[dev-dependencies]
claim = "0.5.0"
criterion = { version = "0.4.0", features = ["async_tokio", "html_reports"] }
futures-core = "0.3.24"
itertools = "0.10.5"
pprof = { version = "0.10.1", features = ["flamegraph"] }
pretty_assertions = "1.3.0"
rand = "0.8.5"
serde_test = "1.0.145"
serde-transcode = "1.1.1"
serde_with = { version = "2.0.1", features = ["chrono", "json", "macros"] }
serde_yaml = "0.9.13"
static_assertions = "1.1.0"
tokio-test = "0.4.2"
wiremock = "0.5.14"
inspect_prometheus = { git = "https://github.com/dmrolfs/inspect_prometheus" }

[[bench]]
name = "bench_main"
harness = false
